--- a/config/.settings
+++ b/config/.settings
@@ -1,12 +1,12 @@
 {
     "username": "louis.wheeler.dev@trifecta.com", 
-    "environment": "developer", 
     "project_name": "SalesforcePracticeApp", 
-    "workspace": "/Users/louis.wheeler/Repos/", 
     "org_url": "", 
     "namespace": "", 
+    "metadata_container": "1dc1a0000006BlmAAE", 
+    "environment": "developer", 
+    "workspace": "/Users/louis.wheeler/Repos/", 
     "id": "RY6TQ5WFYDOXRJBXBCT79UR0W28NOQQ4", 
-    "metadata_container": "1dc1a0000006BBPAA2", 
     "subscription": [
         "ApexClass", 
         "ApexComponent", 
